Clean up `EclipseLanguageService`